--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -11,7 +11,9 @@
         <button>Step</button>
     </div>
 </header>
+<div id="charts"></div>
 </main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script src="{{ url_for('static', filename='lib.js') }}"></script>
 <script src="{{ url_for('static', filename='main.js') }}"></script>
 {% endblock %}
