--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -11,6 +11,10 @@
         <button>Step</button>
     </div>
 </header>
+<div id="config">
+    <button id="reset--new-config">Reset with Changes</button>
+    <ul></ul>
+</div>
 <div id="charts"></div>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
