--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -12,7 +12,12 @@
         </div>
     </header>
     <div id="config">
+        <h2>Configuration</h2>
         <button id="reset--new-config">Reset with Changes</button>
+        <ul></ul>
+    </div>
+    <div id="policy">
+        <h2>Policies</h2>
         <ul></ul>
     </div>
 </div>
