--- a/command/static/style.css
+++ b/command/static/style.css
@@ -2,6 +2,15 @@
   box-sizing: border-box;
 }
 
+input[type='number'] {
+  -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -20,8 +29,8 @@ h2 {
   font-style: italic;
   text-transform: uppercase;
   margin: 1em;
-  border-bottom: 1px dotted black;
-  border-right: 1px dotted black;
+  border-bottom: 1px solid #4A4AFF;
+  border-right: 1px solid #4A4AFF;
 }
 
 input, button {
@@ -57,7 +66,7 @@ header {
   border-right: 1px solid #ddd;
 }
 #panel > div {
-  margin-bottom: 2.5em;
+  margin-bottom: 1em;
 }
 
 #status {
@@ -77,6 +86,7 @@ header {
   padding: 0.25em;
   color: #fff;
   background: #4343e1;
+  text-align: right;
 }
 
 #charts {
@@ -92,23 +102,25 @@ header {
   text-align: center;
 }
 
-#config {
+#config, #policy {
   max-width: 220px;
   border-top: 1px solid transparent;
 }
-.config-item {
+.config-item, .policy-item {
   margin: 1em;
 }
 .config-item--info {
   display: flex;
   justify-content: space-between;
 }
-.config-item--desc {
+.config-item--desc, .policy-item--desc {
   color: #888;
   text-align: justify;
 }
 .config-item--input {
   display: none;
+}
+.config-item--input, .policy-item--input {
   border: none;
   text-align: right;
   font-size: 12px;
@@ -125,4 +137,35 @@ header {
 #reset--new-config {
   display: none;
   width: 100%;
+}
+
+.policy-item--field {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.25em 0;
+}
+.policy-item--field input {
+  text-align: right;
+}
+.policy-item--form button {
+  width: 100%;
+  padding: 0 0.5em;
+  text-align: right;
+  background: -moz-linear-gradient(left,  rgba(74,74,255,0) 0%, rgba(74,74,255,1) 52%, rgba(74,74,255,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  rgba(74,74,255,0) 0%,rgba(74,74,255,1) 52%,rgba(74,74,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  rgba(74,74,255,0) 0%,rgba(74,74,255,1) 52%,rgba(74,74,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004a4aff', endColorstr='#4a4aff',GradientType=1 ); /* IE6-9 */
+}
+.policy-item--form button:hover {
+  background: -moz-linear-gradient(left,  rgba(74,74,255,0) 0%, rgba(42,42,255,1) 52%, rgba(12,12,255,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  rgba(74,74,255,0) 0%,rgba(42,42,255,1) 52%,rgba(12,12,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  rgba(74,74,255,0) 0%,rgba(42,42,255,1) 52%,rgba(12,12,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004a4aff', endColorstr='#0c0cff',GradientType=1 ); /* IE6-9 */
+}
+.policy-item--form button:disabled {
+  color: #a8a8a8;
+  background: -moz-linear-gradient(left,  rgba(199,209,252,0) 0%, rgba(216,221,252,1) 52%, rgba(232,232,252,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  rgba(199,209,252,0) 0%,rgba(216,221,252,1) 52%,rgba(232,232,252,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  rgba(199,209,252,0) 0%,rgba(216,221,252,1) 52%,rgba(232,232,252,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c7d1fc', endColorstr='#e8e8fc',GradientType=1 ); /* IE6-9 */
 }
