--- a/command/static/style.css
+++ b/command/static/style.css
@@ -33,6 +33,22 @@ h2 {
   border-right: 1px solid #4A4AFF;
 }
 
+h3 {
+  font-size: 1em;
+  text-transform: uppercase;
+  font-weight: normal;
+  margin: 0;
+  background: #009966;
+  color: #fff;
+  padding: 0 0.25em;
+  border: 1px solid #007b29;
+}
+
+h4 {
+  margin: 0;
+  font-weight: normal;
+}
+
 input, button {
   font-family: monospace;
 }
@@ -168,4 +184,22 @@ header {
   background: -webkit-linear-gradient(left,  rgba(199,209,252,0) 0%,rgba(216,221,252,1) 52%,rgba(232,232,252,1) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to right,  rgba(199,209,252,0) 0%,rgba(216,221,252,1) 52%,rgba(232,232,252,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c7d1fc', endColorstr='#e8e8fc',GradientType=1 ); /* IE6-9 */
+}
+
+#policy-history {
+  min-width: 160px;
+  max-height: 100vh;
+  overflow-y: auto;
+}
+#policy-history > div {
+  margin: 1em;
+}
+#policy-history li {
+  padding: 0.25em;
+  background: #ededed;
+  border: 1px solid #aaa;
+  margin-top: 1px;
+}
+.policy--args {
+  color: #555;
 }
