--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -22,6 +22,10 @@
     </div>
 </div>
 <div id="charts"></div>
+<div id="policy-history">
+    <h2>Policy History</h2>
+    <div></div>
+</div>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script src="{{ url_for('static', filename='lib.js') }}"></script>
