minor config customization fixes

--- a/command/static/style.css
+++ b/command/static/style.css
@@ -108,7 +108,9 @@ header {
 #charts {
   flex: 1;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 320px);
+  grid-template-columns: repeat(auto-fit, 33%);
+  grid-template-rows:auto 1fr;
+  grid-gap: 0;
 }
 .chart {
   max-width: 320px;
