--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -8,7 +8,7 @@
             <button>Reset</button>
         </div>
         <div id="step">
-            <input type="number" min="1" value="10"><button>Step</button>
+            <input type="number" min="1" value="10"><button>Run</button>
         </div>
     </header>
     <div id="config">
