--- a/command/static/style.css
+++ b/command/static/style.css
@@ -78,7 +78,8 @@ header {
 }
 
 #panel {
-  min-height: 100vh;
+  height: 100vh;
+  overflow-y: auto;
   border-right: 1px solid #ddd;
 }
 #panel > div {
@@ -121,7 +122,7 @@ header {
 }
 
 #config, #policy {
-  max-width: 220px;
+  max-width: 240px;
   border-top: 1px solid transparent;
 }
 .config-item, .policy-item {
