--- a/command/static/style.css
+++ b/command/static/style.css
@@ -112,6 +112,9 @@ header {
   grid-template-columns: repeat(auto-fit, 33%);
   grid-template-rows:auto 1fr;
   grid-gap: 0;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: none;
 }
 .chart {
   max-width: 320px;
