--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -21,14 +21,21 @@
         <ul></ul>
     </div>
 </div>
-<div id="charts"></div>
+<div id="board">
+    <div id="charts"></div>
+    <h2>Space</h2>
+    <div id="space"></div>
+</div>
 <div id="policy-history">
     <h2>Policy History</h2>
     <div></div>
 </div>
 </main>
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://d3js.org/d3-contour.v1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script src="{{ url_for('static', filename='lib.js') }}"></script>
+<script src="{{ url_for('static', filename='spec.js') }}"></script>
 <script src="{{ url_for('static', filename='plotter.js') }}"></script>
 <script src="{{ url_for('static', filename='command.js') }}"></script>
 <script src="{{ url_for('static', filename='main.js') }}"></script>
