--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -25,6 +25,8 @@
     <div id="charts"></div>
     <h2>Space</h2>
     <div id="space"></div>
+    <h2>Publishers</h2>
+    <div id="publishers"></div>
 </div>
 <div id="policy-history">
     <h2>Policy History</h2>
